--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>tech.chillo</groupId>
-    <artifactId>cs-notifications</artifactId>
+    <artifactId>ms-notifications</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cs-notifications</name>
-    <description>cs-notifications</description>
+    <name>ms-notifications</name>
+    <description>ms-notifications</description>
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>2021.0.3</spring-cloud.version>
