--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,24 @@
 server:
-  port : 8082
+  port : 9092
   servlet:
     context-path: /api
 spring:
   application:
-    name: cs-notifications
+    name: ms-notifications
   data:
     mongodb:
       host: localhost
       port: 27017
       database: ${spring.application.name}
-
+  mail:
+    default-encoding: UTF-8
+    properties:
+      mail:
+        smtp:
+          auth: false
+          ssl:
+            trust: "*"
+          starttls:
+            enable: true
+    protocol: smtp
+    test-connection: true
