--- a/src/main/resources/application-recette.yml
+++ b/src/main/resources/application-recette.yml
@@ -3,9 +3,9 @@ spring:
     mongodb:
       host: db-mongo
       authentication-database: admin
-#   mail:
-#     #host: 192.168.1.200
-#     #port: 25
+   mail:
+      host: mails.dev
+      port: 25
 #     host: smtp-relay.sendinblue.com
 #     port: 587
 #     password: dqm1hzycTgOnCQ2s
