--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,35 +15,34 @@ permissions:
   contents: read
 
 jobs:
-
   create-folder:
     name: Create folder
     runs-on: ubuntu-latest
     steps:
-    - name: params
-      run: echo ${{ github.ref_name }} ${{ github.sha }}
-    - name: Create folder
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.RECETTE_APPLICATIONS_HOST }}
-        port: ${{ secrets.RECETTE_APPLICATIONS_PORT }}
-        username: ${{ secrets.RECETTE_APPLICATIONS_USERNAME }}
-        password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
-        key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
-        script: |
-          sudo mkdir -p /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}
-          sudo chmod ugo+rwx /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}
+      - name: params
+        run: echo ${{ github.ref_name }} ${{ github.sha }}
+      - name: Create folder
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.RECETTE_APPLICATIONS_HOST }}
+          port: ${{ secrets.RECETTE_APPLICATIONS_PORT }}
+          username: ${{ secrets.RECETTE_APPLICATIONS_USERNAME }}
+          password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
+          key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
+          script: |
+            sudo mkdir -p /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}
+            sudo chmod ugo+rwx /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}
 
   copy-configs:
-    name: "copy configs"
+    name: 'copy configs'
     runs-on: ubuntu-latest
     needs: create-folder
     steps:
       - uses: actions/checkout@master
       - name: update configs
         run: |
-         sed -i 's|IMAGE_NAME|simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}:${{ github.ref_name }}-${{ github.sha }}|' docker-compose.yml
-         sed -i 's|APP_JAR|simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}-${{ github.ref_name }}-${{ github.sha }}.jar|' Dockerfile
+          sed -i 's|IMAGE_NAME|simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}:${{ github.ref_name }}-${{ github.sha }}|' docker-compose.yml
+          sed -i 's|APP_JAR|simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}-${{ github.ref_name }}-${{ github.sha }}.jar|' Dockerfile
 
       - name: copy file via ssh password
         uses: appleboy/scp-action@master
@@ -53,8 +52,8 @@ jobs:
           username: ${{ secrets.RECETTE_APPLICATIONS_USERNAME }}
           password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
           key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
-          source: "docker-compose.yml"
-          target: "/opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}"
+          source: 'docker-compose.yml'
+          target: '/opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}'
   build:
     runs-on: ubuntu-latest
     steps:
@@ -82,7 +81,7 @@ jobs:
           path: ./target/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}-${{ github.ref_name }}-${{ github.sha }}.jar
 
   build-to-nexus:
-    name: "Build to nexus"
+    name: 'Build to nexus'
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -97,17 +96,17 @@ jobs:
     #  - name: Nexus Repo Publish
     #    uses: sonatype-nexus-community/nexus-repo-github-action@master
     #    with:
-     #     serverUrl: ${{ secrets.NEXUS_HOSTNAME }}
-     #     username: ${{ secrets.NEXUS_USERNAME }}
-      #    password: ${{ secrets.NEXUS_PASSWORD }}
-      #    format: maven2
-      #    repository: maven-releases
-       #   coordinates: groupId=com.cs artifactId=${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}} version=${{ github.ref_name }}-${{ github.sha }}
-       #   assets: extension=jar
-       #   filename: ${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}-${{ github.ref_name }}-${{ github.sha }}.jar
+    #     serverUrl: ${{ secrets.NEXUS_HOSTNAME }}
+    #     username: ${{ secrets.NEXUS_USERNAME }}
+    #    password: ${{ secrets.NEXUS_PASSWORD }}
+    #    format: maven2
+    #    repository: maven-releases
+    #   coordinates: groupId=com.cs artifactId=${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}} version=${{ github.ref_name }}-${{ github.sha }}
+    #   assets: extension=jar
+    #   filename: ${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}-${{ github.ref_name }}-${{ github.sha }}.jar
 
   dockerise-and-push-to-nexus:
-    name: "dockerise-and-push-to-nexus"
+    name: 'dockerise-and-push-to-nexus'
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -120,7 +119,7 @@ jobs:
       - name: Check
         run: |
           ls -al
-      
+
       - name: rename
         run: |
           mv ${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}-*.jar ${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}.jar
@@ -128,16 +127,16 @@ jobs:
 
       - name: update configs
         run: |
-         cat Dockerfile
-         sed -i 's|APP_JAR|simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}:${{ github.ref_name }}-${{ github.sha }}.jar|' Dockerfile
-         cat Dockerfile
+          cat Dockerfile
+          sed -i 's|APP_JAR|simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}:${{ github.ref_name }}-${{ github.sha }}.jar|' Dockerfile
+          cat Dockerfile
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-     
+
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -151,21 +150,53 @@ jobs:
           push: true
           tags: simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}:${{ github.ref_name }}-${{ github.sha }}
 
-  run-container:
-    name: "Run container"
+  stop-container:
+    name: 'Stop container'
     runs-on: ubuntu-latest
     needs: [copy-configs, build-to-nexus, dockerise-and-push-to-nexus]
     steps:
-    - name: Run container
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.RECETTE_APPLICATIONS_HOST }}
-        port: ${{ secrets.RECETTE_APPLICATIONS_PORT }}
-        username: ${{ secrets.RECETTE_APPLICATIONS_USERNAME }}
-        password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
-        key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
-        script: |
-          docker-compose -f /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}/docker-compose.yml stop
-          docker-compose -f /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}/docker-compose.yml rm -f
-          docker rmi simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}:${{ github.ref_name }}-${{ github.sha }} -f
-          docker-compose -f /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}/docker-compose.yml up -d
+      - name: Stop container
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.RECETTE_APPLICATIONS_HOST }}
+          port: ${{ secrets.RECETTE_APPLICATIONS_PORT }}
+          username: ${{ secrets.RECETTE_APPLICATIONS_USERNAME }}
+          password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
+          key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
+          script: |
+            docker-compose -f /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}/docker-compose.yml stop
+            docker-compose -f /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}/docker-compose.yml rm -f
+            docker rmi simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}:${{ github.ref_name }}-${{ github.sha }} -f
+
+  run-container:
+    name: 'Run container'
+    runs-on: ubuntu-latest
+    needs: [stop-container]
+    steps:
+      - name: Run container
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.RECETTE_APPLICATIONS_HOST }}
+          port: ${{ secrets.RECETTE_APPLICATIONS_PORT }}
+          username: ${{ secrets.RECETTE_APPLICATIONS_USERNAME }}
+          password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
+          key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
+          script: >
+            docker-compose
+              -f /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}/docker-compose.yml
+              
+              -e providers.sendinblue.token=${{ secrets.SENDINBLUE_TOKEN }}
+              
+              -e providers.whatsapp.waba-id= ${{ secrets.WHATSAPP_WABA_ID }}
+              -e providers.whatsapp.phone= ${{ secrets.WHATSAPP_PHONE }}
+              -e providers.whatsapp.account-id= ${{ secrets.WHATSAPP_ACCOUNT_ID }}
+              -e providers.whatsapp.token= ${{ secrets.WHATSAPP_TOKEN }}
+              
+              -e providers.twilio.account-id= ${{ secrets.TWILIO_ACCOUNT_ID }}
+              -e providers.twilio.account-secret= ${{ secrets.TWILIO_ACCOUNT_SECRET }}
+              -e providers.twilio.service-id= ${{ secrets.TWILIO_SERVICE_ID }}
+
+              -e providers.vonage.api_key= ${{ secrets.vonage.VONAGE_API_KEY }}
+              -e providers.vonage.api_secret= ${{ secrets.vonage.VONAGE_API_SECRET }}
+              
+              up -d
