--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -181,23 +181,17 @@ jobs:
           username: ${{ secrets.RECETTE_APPLICATIONS_USERNAME }}
           password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
           key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
-          script:
-            >
-            docker-compose
-              -f /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}/docker-compose.yml
-              
-              -e providers.sendinblue.token=${{ secrets.SENDINBLUE_TOKEN }}
-              
-              -e providers.whatsapp.waba-id= ${{ secrets.WHATSAPP_WABA_ID }}
-              -e providers.whatsapp.phone= ${{ secrets.WHATSAPP_PHONE }}
-              -e providers.whatsapp.account-id= ${{ secrets.WHATSAPP_ACCOUNT_ID }}
-              -e providers.whatsapp.token= ${{ secrets.WHATSAPP_TOKEN }}
-              
-              -e providers.twilio.account-id= ${{ secrets.TWILIO_ACCOUNT_ID }}
-              -e providers.twilio.account-secret= ${{ secrets.TWILIO_ACCOUNT_SECRET }}
-              -e providers.twilio.service-id= ${{ secrets.TWILIO_SERVICE_ID }}
-
-              -e providers.vonage.api_key= ${{ secrets.VONAGE_API_KEY }}
-              -e providers.vonage.api_secret= ${{ secrets.VONAGE_API_SECRET }}
-              
+          script: |
+            docker-compose \\
+              -f /opt/applications/${{env.APPLICATION_NAME}}/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}/docker-compose.yml \\
+              -e providers.sendinblue.token=${{ secrets.SENDINBLUE_TOKEN }} \\
+              -e providers.whatsapp.waba-id= ${{ secrets.WHATSAPP_WABA_ID }} \\
+              -e providers.whatsapp.phone= ${{ secrets.WHATSAPP_PHONE }} \\
+              -e providers.whatsapp.account-id= ${{ secrets.WHATSAPP_ACCOUNT_ID }} \\
+              -e providers.whatsapp.token= ${{ secrets.WHATSAPP_TOKEN }} \\
+              -e providers.twilio.account-id= ${{ secrets.TWILIO_ACCOUNT_ID }} \\
+              -e providers.twilio.account-secret= ${{ secrets.TWILIO_ACCOUNT_SECRET }} \\
+              -e providers.twilio.service-id= ${{ secrets.TWILIO_SERVICE_ID }} \\
+              -e providers.vonage.api_key= ${{ secrets.VONAGE_API_KEY }} \\
+              -e providers.vonage.api_secret= ${{ secrets.VONAGE_API_SECRET }} \\
               up -d
