--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,7 +129,17 @@ jobs:
         run: |
           cat Dockerfile
           sed -i 's|APP_JAR|simachille/${{env.APPLICATION_TYPE}}-${{env.APPLICATION_NAME}}:${{ github.ref_name }}-${{ github.sha }}.jar|' Dockerfile
-          cat Dockerfile
+
+          sed -i 's|${{ secrets.SENDINBLUE_TOKEN }}|${{ secrets.SENDINBLUE_TOKEN }}|' docker-compose.yml
+          sed -i 's|${{ secrets.WHATSAPP_WABA_ID }}|${{ secrets.WHATSAPP_WABA_ID }}|' docker-compose.yml
+          sed -i 's|${{ secrets.WHATSAPP_PHONE }}|${{ secrets.WHATSAPP_PHONE }}|' docker-compose.yml
+          sed -i 's|${{ secrets.WHATSAPP_ACCOUNT_ID }}|${{ secrets.WHATSAPP_ACCOUNT_ID }}|' docker-compose.yml
+          sed -i 's|${{ secrets.WHATSAPP_TOKEN }}|${{ secrets.WHATSAPP_TOKEN }} |' docker-compose.yml
+          sed -i 's|${{ secrets.TWILIO_ACCOUNT_ID }}|${{ secrets.TWILIO_ACCOUNT_ID }}|' docker-compose.yml
+          sed -i 's|${{ secrets.TWILIO_ACCOUNT_SECRET }}|${{ secrets.TWILIO_ACCOUNT_SECRET }}|' docker-compose.yml
+          sed -i 's|${{ secrets.TWILIO_SERVICE_ID }}|${{ secrets.TWILIO_SERVICE_ID }}|' docker-compose.yml
+          sed -i 's|${{ secrets.VONAGE_API_KEY }}|${{ secrets.VONAGE_API_KEY }}|' docker-compose.yml
+          sed -i 's|${{ secrets.VONAGE_API_SECRET }}|${{ secrets.VONAGE_API_SECRET }}|' docker-compose.yml
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
