--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,7 @@ on:
   push:
     branches:
       #- develop
-      - deploiement
-      - notification
+      - feature/*
   workflow_dispatch:
 
 env:
