--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ providers:
     template-host: https://graph.facebook.com/v16.0/${providers.whatsapp.waba-id}
     callback-path: ${providers.callback.path}/whatsapp
   twilio:
+    alpha-id: ZEEVEN
     host: https://api.twilio.com/2010-04-01/Accounts
     callback-path: ${providers.callback.path}/twilio
   vonage:
