--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 application-local.yml
+**/application-local.yml
+
 ### STS ###
 .apt_generated
 .classpath
