Envoi de messages

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 application:
   messages:
+    status:
+        exchange: messages.status
+    send:
+        queue: messages.send
     queue: "tech.messages.queue"
   notifications:
     queue: "tech.notifications.queue"
